<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alf_ros</name>
  <version>1.0.0</version>
  <description>Full ROS2 communication software with GUI for Unitree G1 EDU humanoid robot</description>
  <maintainer email="contact@example.com">MatPomGit</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
